<?xml version="1.0"?>
<package>
  <name>beego_gazebo</name>
  <version>1.0.0</version>
  <description> The beego_gazebo package</description>
  
  <maintainer email="endo-r@roboken.iit.tsukuba.ac.jp">endo-r</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>

</package>
